--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "4.18.2",
+    "sqlite": "5.1.1",
+    "sqlite3": "5.1.6"
+  }
 }
